<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gris">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:contentDescription="@string/money"
                    android:background="@color/black"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewMoney"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/money"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/gris9"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonX1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/x1"
                    android:textColor="@color/gris9"/>

                <Button
                    android:id="@+id/buttonX10"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/x10"
                    android:textColor="@color/gris9"/>

                <Button
                    android:id="@+id/buttonX25"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/x25"
                    android:textColor="@color/gris9"/>

                <Button
                    android:id="@+id/buttonXMax"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/xMax"
                    android:textColor="@color/gris9"/>
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/settings"
            app:srcCompat="@android:drawable/ic_menu_manage" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>